--- a/css/estilos.css
+++ b/css/estilos.css
@@ -554,12 +554,14 @@ body {
         grid-template-columns: 1fr;
         grid-template-rows: max-content max-content;
         gap: 3em;
-        justify-items: center;
+        justify-items:center ;
     }
+
 
     .testimony__img{
         width: 200px;
         height: 200px;
+        
     }
 
     .questions__copy{
@@ -592,7 +594,7 @@ body {
 
 }
 
-@media (max-width: 600px){
+@media (max-width:600px){
     .hero__title{
         font-size: 2rem;
     }
@@ -611,6 +613,7 @@ body {
 
     .price__element--best{
         width: 90%;
+        /* padding: 40px; */
     }
 
     .price__price{
@@ -626,12 +629,12 @@ body {
         gap: .9em;
     }
 
-    .testimony__course{
-        margin-top: 15px;
-    }
-
     .testimony__arrow{
         width: 100%;
+    }
+
+    .testimony__course{
+        margin-top: 15px;
     }
 
     .questions__title{
@@ -664,5 +667,11 @@ body {
     .footer__submit{
         margin-right: auto;
         margin-left: 0;
+        
+
+        /* 
+        margin:0;
+        width: 100%;
+        */
     }
 }
